# python-picnic

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yaml  publish-twine.yaml
picnic/: __init__.py  _picnic.pyi  _picnic.pyx  cpicnic.pxd  helper_functions.h
picnic/tests/: test_picnic.py
