[build-system]
requires = [
  "setuptools >= 39.2",
  "Cython (>= 0.28)",
  "pkgconfig",
]
build-backend = "setuptools.build_meta"

[tool.black]
target_version = ["py37"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | build
  | dist
)/
'''
