[metadata]
name = python-picnic
version = 1.0.1
author = Sebastian Ramacher
author_email = sebastian.ramacher@ait.ac.at
url = https://github.com/sebastinas/python-picnic
description = Python bindings for picnic
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Security :: Cryptography

[options]
zip_safe = False
python_requires = >=3.7
setup_requires =
  Cython
  pkgconfig
